test/classes/errors/nilability-init-var/init-var-nonnil-unmanaged-from-oknil-borrowed.chpl
//  lhs: unmanaged!  rhs: borrowed?  errors: nlb, mm

class MyClass {
  var x: int;
}

var rhs: borrowed MyClass?;

var lhs: unmanaged MyClass = rhs;
