test/classes/errors/nilability-init-var/init-var-nonnil-unmanaged-from-oknil-borrowed.good
init-var-nonnil-unmanaged-from-oknil-borrowed.chpl:9: error: cannot assign to non-nilable unmanaged MyClass from nilable borrowed MyClass?
